[gd_scene load_steps=13 format=3 uid="uid://letphvsa58ey"]

[ext_resource type="Script" path="res://Scripts/Soldiers/enemy_swords_man.gd" id="1_fxji8"]
[ext_resource type="Texture2D" uid="uid://co5pq88hbxofi" path="res://Assets/MinifolksHumans/Outline/EnemySwordMan.png" id="2_2441y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mqc5s"]
radius = 14.0
height = 52.0

[sub_resource type="Animation" id="Animation_nlhal"]
resource_name = "Attack"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_b7nx3"]
resource_name = "Death"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_xm6an"]
resource_name = "Hit"
length = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}

[sub_resource type="Animation" id="Animation_knah8"]
resource_name = "Idle"
length = 0.16
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_euuxo"]
resource_name = "Walk"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fma1n"]
_data = {
"Attack": SubResource("Animation_nlhal"),
"Death": SubResource("Animation_b7nx3"),
"Hit": SubResource("Animation_xm6an"),
"Idle": SubResource("Animation_knah8"),
"Walk": SubResource("Animation_euuxo")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4iax"]
bg_color = Color(0.385493, 0.385493, 0.385492, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60wk4"]
bg_color = Color(0.737255, 0.129412, 0.215686, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2t1pr"]
size = Vector2(21, 41)

[node name="EnemySwordMan" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_fxji8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7)
shape = SubResource("CapsuleShape2D_mqc5s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(3, 3)
texture = ExtResource("2_2441y")
flip_h = true
hframes = 6
vframes = 6
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fma1n")
}
autoplay = "Walk"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -22.0
theme_override_styles/background = SubResource("StyleBoxFlat_j4iax")
theme_override_styles/fill = SubResource("StyleBoxFlat_60wk4")
show_percentage = false

[node name="AttackRaycast" type="RayCast2D" parent="."]
rotation = 1.5708
collide_with_areas = true
collide_with_bodies = false

[node name="AttackTimer" type="Timer" parent="."]

[node name="EnemyArea" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2(-10.5, 10.5)
shape = SubResource("RectangleShape2D_2t1pr")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
